# pgrx

./: ARCHITECTURE.md  CLAUDE.md  README.md  VECTOR_SEARCH_RESEARCH.md  bench_concurrent.py  mix.exs  run_baseline_comparison.sh  run_compute_benchmark.sh  run_concurrency_bench.sh  run_hnsw_bench.sh  run_idle_analysis.sh  run_join_profile.sh  run_profile.sh  run_qps_bench.sh  run_speed_comparison.sh  run_vec_mini.sh  run_vec_quick.sh
apps/engine/lib/: engine.ex
apps/engine/lib/engine/: native.ex
apps/wire/lib/wire/: connection.ex
native/cli/src/: main.rs
native/engine/: Cargo.toml
native/engine/src/: arena.rs  catalog.rs  executor.rs  hnsw.rs  lib.rs  parser.rs  sequence.rs  storage.rs  types.rs
rel/: vm.args
