[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35"
pg_query = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dev-dependencies]
serial_test = "3"
